@@ -1,8 +1,14 @@
 plugins {
     id "application"
     id "java"
-    id 'org.jetbrains.kotlin.jvm' version '1.3.10'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.61'
+    id 'org.jetbrains.dokka' version '0.9.18'
+    id 'com.github.spotbugs' version '3.0.0'
+    id "signing"
     id "eclipse"
+    id "checkstyle"
+    id "maven-publish"
     id "idea"
     id "jacoco"
 }
@@ -22,12 +28,74 @@ distTar {
     archiveName "shuttle.tgz"
 }
 
-mainClassName = "com.openlattice.shuttle.ShuttleKt"
-applicationDefaultJvmArgs = ["-Xmx1G", "-Xms1G", "-server"]
-sourceCompatibility = JavaVersion.VERSION_1_10
-targetCompatibility = JavaVersion.VERSION_1_10
+jacoco {
+    toolVersion = "0.8.2"
+}
+
+checkstyle {
+    toolVersion = '7.4'
+}
+
+tasks.withType(Checkstyle) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
+    }
+}
+
+spotbugs {
+    reportLevel = 'high'
+    toolVersion = "${spotbugs_annotations_version}"
+}
+
+tasks.withType(com.github.spotbugs.SpotBugsTask) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
+    }
+}
+
+mainClassName = "com.openlattice.shuttle.ShuttleCliKt"
 
 def S_ARGS = "$System.env.SHUTTLE_ARGS"
+def S_XMS = "$System.env.SHUTTLE_XMS"
+def S_XMX = "$System.env.SHUTTLE_XMX"
+def PARALLEL = "$System.env.PARALLELISM"
+def GC = "$System.env.GC"
+
+if (S_XMS == 'null' || S_XMS == null || S_XMS == "") {
+    S_XMS = '-Xms1g'
+}
+
+if (S_XMX == 'null' || S_XMX == null || S_XMX == "") {
+    S_XMX = '-Xms4g'
+}
+
+if (S_ARGS == 'null' || S_ARGS == null || S_ARGS == "") {
+    S_ARGS = 'local postgres medialocal auditlocal'
+}
+
+
+if (PARALLEL == 'null' || PARALLEL == null || PARALLEL == "") {
+    PARALLEL = "-Djava.util.concurrent.ForkJoinPool.common.parallelism=" + Runtime.runtime.availableProcessors()
+}
+
+if (GC == 'null' || GC == null || GC == "") {
+    GC = "-XX:+UseG1GC"
+}
+
+println "Using java args for running ${projectName}: Xms=" + S_XMS + ",Xmx=" + S_XMX + ",forkJoinPool=" + PARALLEL + " -server"
+
+applicationDefaultJvmArgs = ["-Xmx1G", "-Xms1G", "-server", PARALLEL]
+applicationDefaultJvmArgs += ["--add-modules", "java.se",
+                              "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
+                              "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                              "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+                              "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+                              "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+                              "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 run {
     if (S_ARGS != null) {
@@ -41,8 +109,19 @@ run {
 
 }
 
+println "Enabled profiles: " + Arrays.toString(run.args)
+
+
+def versions = [
+        checkstyle: '7.4',
+]
+
+
 configurations {
     provided
+    compile {
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    }
 }
 
 sourceSets {
@@ -55,25 +134,41 @@ sourceSets {
 jar {
     doFirst {
         manifest {
-            attributes "Class-Path": configurations.runtime.files.collect { it.getName() }.join(" ")
+            attributes (
+                    "Class-Path": configurations.runtime.files.collect { it.getName() }.join(" "),
+                    "Main-Class": mainClassName
+            )
         }
     }
 }
 
 dependencies {
+    spotbugsPlugins "com.h3xstream.findsecbugs:findsecbugs-plugin:${findsecbugs_version}"
+    compileOnly "net.jcip:jcip-annotations:${jcip_version}"
+    compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
+    testCompileOnly "net.jcip:jcip-annotations:${jcip_version}"
+    testCompileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
 
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:${jackson_version}"
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${jackson_version}"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    
-//    compile 'com.auth0:auth0:1.1.0'
-//    compile 'com.auth0:java-jwt:3.2.0'
 
-    compile 'commons-cli:commons-cli:1.4'
+    compile "commons-cli:commons-cli:$commons_cli_version"
+    compile "javax.xml.bind:jaxb-api:$jaxb_api_version"
+    compile "com.sun.xml.bind:jaxb-core:$jaxb_core_version"
+    compile "com.sun.xml.bind:jaxb-impl:$jaxb_api_version"
+    compile "javax.activation:activation:$javax_activation_version"
+
+    compile "org.jodd:jodd-mail:$jodd_mail_version"
+
+    compile "com.microsoft.sqlserver:mssql-jdbc:$mssql_jdbc_version"
+    compile "org.postgresql:postgresql:$postgresql_version"
 
     if (project.hasProperty('developmentMode') && project.developmentMode) {
         logger.quiet(project.name + " using project dependencies.")
-        compile project(":rhizome")
         compile project(":api")
+        compile project(":rhizome")
+        compile project(":conductor-client")
 
         testCompile(project(path: ":api", configuration: "tests"))
         testCompile(project(path: ":rhizome", configuration: "tests"))
@@ -81,6 +176,7 @@ dependencies {
     } else {
         logger.quiet(project.name + " using jar dependencies.")
         compile "com.openlattice:rhizome:${rhizome_version}"
+        compile "com.openlattice:conductor-client:${conductor_client_version}"
         compile "com.openlattice:api:${api_version}"
 
         testCompile "com.openlattice:api:${api_version}:tests"
@@ -90,8 +186,9 @@ dependencies {
 
     compile fileTree(dir: "lib/", include: "*.jar")
 
+    testCompile "io.findify:s3mock_2.12:$s3mock_version"
     testCompile "junit:junit:${junit_version}"
-    testCompile "org.mockito:mockito-core:2.2.7"
+    testCompile "org.mockito:mockito-core:$mockito_version"
 
     if (project.hasProperty("developmentMode") && project.developmentMode) {
         testCompile project(":api")
@@ -104,12 +201,33 @@ startScripts {
     classpath = files(jar.archivePath)
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["--add-modules", "java.se",
+                             "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
+                             "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                             "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+                             "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+                             "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+                             "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
+tasks.withType(Test) {
+    jvmArgs += [PARALLEL,"--add-modules", "java.se",
+                "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
+                "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+                "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+                "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+                "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
+
 eclipse {
     ext.downloadSources = true
     ext.downloadJavadoc = true
 
-    ext.sourceCompatibility = JavaVersion.VERSION_1_10
-    ext.targetCompatibility = JavaVersion.VERSION_1_10
+    ext.sourceCompatibility = JavaVersion.VERSION_11
+    ext.targetCompatibility = JavaVersion.VERSION_11
 }
 
 eclipse.classpath.plusConfigurations += [configurations.provided]
@@ -125,4 +243,3 @@ compileTestKotlin {
         jvmTarget = "1.8"
     }
 }
-
